src/objects/Category__c.object
<CustomObject>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability</label>
        <referenceTo>Types_of_Rooms__c</referenceTo>
        <relationshipLabel>Category</relationshipLabel>
        <relationshipName>Category</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>No_ofPersons__c</fullName>
        <label>No.ofPersons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoomPrice__c</fullName>
        <label>RoomPrice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RoomType__c</fullName>
        <label>RoomType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceCharge__c</fullName>
        <label>ServiceCharge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Smoking__c</fullName>
        <label>Smoking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Category</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Category</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>